--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li>Fandy says relax</li>
       <li>Fandrx says being happy</li>
       <li>Now you say something</li>
+      <li>We are together</li>
     </u1>
     
     
