--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <li>Fandrx says being happy</li>
       <li>Now you say something</li>
       <li>We are together</li>
+
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
+
+
     </ul>
     
     
